[gd_scene load_steps=7 format=3 uid="uid://11vh3qvkldpg"]

[ext_resource type="Script" path="res://Menus/MainMenuBehaviour.gd" id="1_chga8"]
[ext_resource type="Texture2D" uid="uid://bgsy5y8pkes02" path="res://Menus/MainMenu.PNG" id="2_3ldfq"]
[ext_resource type="Theme" uid="uid://citlvkejb3k1b" path="res://Menus/Theme.tres" id="3_742pg"]
[ext_resource type="Texture2D" uid="uid://0mugdd3wed6r" path="res://Menus/Bluesky_Logo.png" id="4_n2pmq"]
[ext_resource type="Texture2D" uid="uid://b4xq2okxk8xy5" path="res://Menus/Bluesky_Logo_White.png" id="5_hebjw"]

[sub_resource type="LabelSettings" id="LabelSettings_gux88"]
font_size = 114
font_color = Color(0.22, 0.441, 1, 1)
outline_size = 6

[node name="MainMenu" type="Control" node_paths=PackedStringArray("startButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chga8")
startButton = NodePath("StartButton")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3ldfq")

[node name="Title" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 1908.0
offset_bottom = 786.0
text = "Secret Mission"
label_settings = SubResource("LabelSettings_gux88")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = 120.0
offset_right = 130.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_742pg")
text = "Start"

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = 275.0
offset_right = 130.0
offset_bottom = 355.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_742pg")
text = "Options
"

[node name="HelpButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = 360.0
offset_right = 130.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_742pg")
text = "Help"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = 445.0
offset_right = 130.0
offset_bottom = 525.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_742pg")
text = "Quit"

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -143.0
offset_right = 440.0
offset_bottom = 387.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("4_n2pmq")
texture_pressed = ExtResource("5_hebjw")
texture_hover = ExtResource("5_hebjw")
texture_focused = ExtResource("5_hebjw")

[connection signal="pressed" from="StartButton" to="." method="startGame"]
[connection signal="pressed" from="OptionsButton" to="." method="openOptions"]
[connection signal="pressed" from="HelpButton" to="." method="openHelp"]
[connection signal="pressed" from="QuitButton" to="." method="quitGame"]
[connection signal="pressed" from="TextureButton" to="." method="openBluesky"]
